src/test/resources/typeSystemTestModels/invalid/enums/EnumModifiersValid.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.enums;

public class EnumModifiersValid {

  abstract enum A {

  }

  final enum B {

  }
}
